TAG: littriageload-6-0-25-12
TAG: littriageload-6-0-25-11
DATE: 05/06/2025
STAFF: lec
change tar of INPUTDIR -> cp -r
change for/mv of PUBLISHEDDIR -> rsync

TAG: littriageload-6-0-25-10
DATE: 05/01/2025
STAFF: lec
change 20 days to 35 days

TAG: littriageload-6-0-25-8
TAG: littriageload-6-0-25-7
DATE: 04/29/2025
STAFF: lec
        modified:   littriageload.sh
had been commented out; restore_needsreview_folder.sh; restore tihs call
oops wrong; comment out again

TAG: littriageload-6-0-25-6
TAG: littriageload-6-0-25-5
DATE: 04/01/2025
STAFF: lec
per Cindy: PRO post reports no longer needed
processSecondary.sh:./secondaryReports.csh >> ${LOG} 2>&1
secondaryReports.csh:# secondaryReports.csh

TAG: littriageload-6-0-25-4
TAG: littriageload-6-0-25-3
DATE: 01/14/2025, 01/28/2025
STAFF: lec
#       modified:   littriageload.py
wts2-1603/e4g-117/modify so papers imported via the GXDHT littriage load folder assigned status GXDHT Chosen
littriage_gxdht : change Indexed -> Chosen
updateRelevance.py

TAG: littriageload-6-0-25-2
TAG: littriageload-6-0-25-1
DATE: 12/31/2024
STAFF: lec
#       modified:   littriageload.sh
wts2-1597/e4g-108/Lit Triage : check needs_review & _New_NewCurrent
turned off call to findNLMrefresh.sh

TAG: littriageload-6-0-24-5
DATE: 12/20/2024
STAFF: lec
added logic to add pubmedid *and* doiid from EUTILS api

TAG: littriageload-6-0-24-4
TAG: littriageload-6-0-24-3
TAG: littriageload-6-0-24-2
DATE: 10/24/2024
STAFF: lec
wts2-1565/e4g-39/GXD HT: Missing PMIDs
added 'littriage_gxdht'

TAG: littriageload-6-0-24-1
TAG: littriageload-6-0-23-6
TAG: littriageload-6-0-23-5
DATE: 10/09/2024
STAFF: lec
wts2-1564/e4g-32/Lit Triage : needs_review/missing data from required field for DOI ID
NCBI fixed their issue Case # CAS-1381052-C7Y5N5: PubMed and E-Utils API Errors TRACKING:000435001374767
bin/littriageload.sh:commented out call to restore_needsreview_folder.sh
see bin/testeutilsapi.py for testing 

TAG: littriageload-6-0-23-4
TAG: littriageload-6-0-23-3